Microservice/K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
        - name: microservice
          image: ehsanmoosavi/microservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: microservice
  ports:
  - name: microservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: platformgrpc
    protocol: TCP
    port: 666
    targetPort: 666
