Microservice/K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: microservicenp-srv
spec:
    type: NodePort
    selector:
        app: microservice
    ports:
        - name: microservice
          protocol: TCP
          port: 80
          targetPort: 80
